# soap-dispenser

./: .gitignore  Anchor.toml  README.md  package.json
app/: package-lock.json  package.json
app/src/api/: index.ts
app/src/app/: layout.tsx  page.tsx  providers.tsx
app/src/app/[dispenser]/: layout.tsx  page.tsx
app/src/app/api/getAccessKey/: route.ts
app/src/app/api/mint/: route.ts
app/src/app/dashboard/[creator]/: layout.tsx  page.tsx
app/src/components/: CollectionStep.tsx  ConnectWalletButton.tsx  CustomSelect.tsx  FileUpload.tsx  Navbar.tsx  ReviewStep.tsx  TreeConfigStep.tsx  WorkspaceProvider.tsx
app/src/constants/: index.ts  meta.ts  soap_dispenser.json
app/src/hooks/: useDispenser.tsx  usePhantom.tsx  useSignature.tsx
app/src/lib/auth/: index.ts
app/src/lib/middleware/: forKey.ts  withProtect.ts
app/src/state/: signatureSlice.ts  store.ts
app/src/styles/: theme.ts
app/src/styles/components/: button.ts  modal.ts
app/src/types/: declaration.d.ts  soap_dispenser.ts
app/src/utils/: index.ts  programs.ts
programs/soap-dispenser/: Cargo.toml
programs/soap-dispenser/src/: constants.rs  error.rs  lib.rs  states.rs  utils.rs
programs/soap-dispenser/src/instructions/: fund_pot.rs  init.rs  mint.rs  mod.rs  withdraw_pot.rs
scripts/: WrapperConnection.ts  fundPot.ts  getAsset.ts  getDispensers.ts  getTreePrices.ts  index.ts  init.ts  initIdl.js  mint.ts  readApi.ts  withdrawPot.ts
tests/: soap-dispenser.ts
