[package]
name = "soap-dispenser"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "soap_dispenser"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = { version = "0.26.0" }
solana-program = "=1.14.13"
mpl-token-metadata = { version = "1.12.0", features = ["no-entrypoint"] }
spl-account-compression = { version="0.1.8", features = ["cpi"] }
mpl-bubblegum = { version = "0.8.0", features = ["no-entrypoint"] }
bs58 = "^0.4.0"