[package]
name = "soap-dispenser"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "soap_dispenser"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.26.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.26.0" }
mpl-bubblegum = { version = "0.8.0", features = ["cpi"] }
mpl-token-metadata = { version = "1.11", features = ["no-entrypoint"] }
solana-program = "1.14.13"
spl-account-compression = { version="0.1.8", features = ["cpi"] }
winnow = "=0.4.1"
toml_datetime = "=0.6.1"